[package]
name = "home_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
confy = "0.6.1"
mlua = { version = "0.10.3", features = ["lua51", "vendored"] }
ron = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
